# CoMTKD-MARL

./: .gitignore  CITATION.cff  DEPLOY.md  LICENSE  Makefile  README.md  VALIDATION.md  evaluate.py  pyproject.toml  requirements.txt  setting.py  train_baseline.py  train_loops.py  train_student_avg.py  train_student_comtkd_marl.py  train_student_rl.py  utils.py
configs/: cifar100.yaml
dataset/: __init__.py  cifar100.py
distiller_zoo/: __init__.py  coherent_losses.py  feature_mse_mtkd_rl.py
experiments/: __init__.py  cardinality_sweep.py  summarize_runs.py  validate_theorems.py
helper/: __init__.py  checkpoint.py  logger.py  metrics.py  reproducibility.py  theorem_metrics.py
models/: __init__.py  cifar_resnet.py  registry.py  torchvision_wrappers.py  util.py  wide_resnet.py
models/comtkd_marl/: __init__.py  actor.py  cardinality.py  controller.py  critic.py  observations.py  ppo.py  synchronization.py
paper/: CoMTKD_MARL_Algorithmica_NeurIPS.tex
scripts/: sweep_cardinality.sh  train_comtkd.sh  train_teachers.sh
tests/: test_cardinality.py  test_losses.py  test_models.py  test_policy.py  test_synchronization.py  test_theorem_metrics.py
